--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Unilicense",
     "authors": [
         {
-            "name": "Vianney Devreese",
+            "name": "Lepidosteus",
             "email": "lepidosteus@gmail.com"
         }
     ],
